# ChangeLog for net-dns/pdns
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns/ChangeLog,v 1.23 2005/10/30 14:21:49 swegener Exp $

  30 Oct 2005; Sven Wegener <swegener@gentoo.org>
  +files/2.9.19-ldap-fix.patch, pdns-2.9.19.ebuild:
  Fix ldap includes.

*pdns-2.9.19 (29 Oct 2005)

  29 Oct 2005; Sven Wegener <swegener@gentoo.org> +pdns-2.9.19.ebuild:
  Version bump.

  30 Jul 2005; Sven Wegener <swegener@gentoo.org>
  -files/pdns-2.9.17-amd64-fix.diff, -pdns-2.9.17.ebuild,
  pdns-2.9.18.ebuild:
  Added --with-pgsql-includes=/usr/include for older postgresql versions.
  Removed old ebuild.

  22 Jul 2005; Danny van Dyk <kugelfang@gentoo.org> pdns-2.9.18.ebuild:
  Marked stable on amd64.

  20 Jul 2005; Sven Wegener <swegener@gentoo.org>
  +files/2.9.18-ldap-fix.patch, pdns-2.9.18.ebuild:
  Added small patch from upstream that fixes ldap compilation.

  18 Jul 2005; Sven Wegener <swegener@gentoo.org> pdns-2.9.18.ebuild:
  Marked stable on x86, security bug #99352.

  17 Jul 2005; Sven Wegener <swegener@gentoo.org>
  +files/2.9.18-default-mysql-options.patch, pdns-2.9.18.ebuild:
  Added a small patch that makes pdns load the default mysql options from my.cnf.

*pdns-2.9.18 (17 Jul 2005)

  17 Jul 2005; Sven Wegener <swegener@gentoo.org> files/pdns,
  +files/precursor, +files/recursor.conf, metadata.xml, +pdns-2.9.18.ebuild:
  Version bump. Added support for the recursor component, bug #59862. Added
  multiple instances support, thanks to Christian Zoffoli in bug #80322.
  Enabled the sqlite backend, bug #91325.

  05 May 2005; Seemant Kulleen <seemant@gentoo.org> -pdns-2.9.8.ebuild,
  -pdns-2.9.12.ebuild, -pdns-2.9.12-r1.ebuild, -pdns-2.9.15.ebuild,
  -pdns-2.9.16.ebuild:
  removed old crusty ebuilds

  12 Feb 2005; Jared Hudson <jhhudso@gentoo.org>
  +files/pdns-2.9.17-amd64-fix.diff:
  Bumped pdns to 2.9.17 and marked stable due to DOS vulnerability reported in bug #80713
