@@ -1,9 +1,9 @@
 #!/sbin/runscript
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns/files/pdns,v 1.5 2005/07/17 05:25:53 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns/files/pdns,v 1.6 2006/01/20 19:03:54 wschlich Exp $
 
-opts="${opts} reload"
+opts="${opts} reload monitor dump"
 
 # Default instance
 PDNS_INSTANCE="default"
@@ -36,4 +36,16 @@ reload() {
 	ebegin "Reloading PowerDNS (${PDNS_INSTANCE})"
 	/usr/bin/pdns_control ${PDNS_CONFIG} cycle &>/dev/null
 	eend $?
+}
+
+monitor() {
+       ebegin "Starting PowerDNS (${PDNS_INSTANCE}) in monitor mode"
+       /usr/sbin/pdns_server ${PDNS_CONFIG} --daemon=no --guardian=no --control-console --loglevel=9
+       eend $?
+}
+
+dump() {
+       ebegin "Dumping PowerDNS (${PDNS_INSTANCE}) variables"
+       /usr/bin/pdns_control ${PDNS_CONFIG} list
+       eend $?
 }
