@@ -1,6 +1,13 @@
 # ChangeLog for net-dns/pdns
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns/ChangeLog,v 1.23 2005/10/30 14:21:49 swegener Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns/ChangeLog,v 1.24 2006/01/20 19:03:54 wschlich Exp $
+
+*pdns-2.9.19-r1 (20 Jan 2006)
+
+  20 Jan 2006; Wolfram Schlich <wschlich@gentoo.org> files/pdns,
+  +pdns-2.9.19-r1.ebuild:
+  add monitor and dump opts to init script, make config files go into
+  /etc/powerdns, add pdns user+group
 
   30 Oct 2005; Sven Wegener <swegener@gentoo.org>
   +files/2.9.19-ldap-fix.patch, pdns-2.9.19.ebuild:
